<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top"
            android:text="@string/hello"
            android:textColor="@color/textColor2" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/Deskripsi_Gb"
            android:scaleType="center"
            android:src="@drawable/gitar" />

        <Button
            android:id="@+id/stringE1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/e1" >
        </Button>

        <Button
            android:id="@+id/stringA"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/a" >
        </Button>

        <Button
            android:id="@+id/stringD"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/d" >
        </Button>

        <Button
            android:id="@+id/stringG"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/g" >
        </Button>

        <Button
            android:id="@+id/stringB"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/b" >
        </Button>

        <Button
            android:id="@+id/stringE"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/e2" >
        </Button>

        <TextView
            android:id="@+id/keterangan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textColor="@color/textColor"
            android:textStyle="bold" >
        </TextView>

        <Button
            android:id="@+id/keluar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/keluarBtn" >
        </Button>

    </LinearLayout>

</ScrollView>